Implement Infrastructure layer with EF Core

--- a/SalesManagementSystem.Application/SalesManagementSystem.Application.csproj
+++ b/SalesManagementSystem.Application/SalesManagementSystem.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SalesManagementSystem.Domain\SalesManagementSystem.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
